--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #66CCFF;
+  background: linear-gradient(90deg, rgb(255, 255, 255) 0.5%, #66CCFF 100%);
 }
 
 code {
