--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -1,7 +1,3 @@
-$primary-color: #0066FF;
-$hover-color: #68ff2cf5;
-$letter-color: #333;
-
 .todoListMain .header input {
     padding: 10px;
     font-size: 16px;
@@ -14,14 +10,14 @@ $letter-color: #333;
     font-size: 16px;
     margin: 10px;
     margin-right: 0px;
-    background-color: $primary-color;
+    background-color: #0066FF;
     color: #FFF;
-    border: 2px solid $primary-color;
+    border: 2px solid #0066FF;
     border-radius: 5px;
 }
 .todoListMain .header button:hover {
-    background-color: $hover-color;
-    border: 2px solid $hover-color;
+    background-color: #68ff2cf5;
+    border: 2px solid #68ff2cf5;
     transition: background-color .2s ease-out;
     cursor: pointer;
 }
@@ -31,14 +27,14 @@ $letter-color: #333;
     width: 250px;
 }
 .todoListMain .theList li {
-    color: $letter-color;
+    color: #333;
     background-color: rgba(255,255,255,.5);
     padding: 15px;
     margin-bottom: 15px;
     border-radius: 5px;
 }
 .todoListMain .theList li {
-    color: $letter-color;
+    color: #333;
     background-color: rgba(255,255,255,.5);
     padding: 15px;
     margin-bottom: 15px;
@@ -46,6 +42,6 @@ $letter-color: #333;
     transition: background-color .2s ease-out;
 }
 .todoListMain .theList li:hover {
-    background-color: $hover-color;
+    background-color: #68ff2cf5;
     cursor: pointer;
 }
