--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -16,8 +16,8 @@
     border-radius: 5px;
 }
 .todoListMain .header button:hover {
-    background-color: #68ff2cf5;
-    border: 2px solid #68ff2cf5;
+    background-color: #F8B2C0;
+    border: 2px solid #F8B2C0;
     transition: background-color .2s ease-out;
     cursor: pointer;
 }
@@ -42,6 +42,6 @@
     transition: background-color .2s ease-out;
 }
 .todoListMain .theList li:hover {
-    background-color: #68ff2cf5;
+    background-color: #F8B2C0;
     cursor: pointer;
 }
